<resources>
    <string name="hello">Hello World, EmiratesExpressActivity!</string>
    <string name="app_name">Emirates Express</string>
    <string name="main_screen_title">Emirates Express</string>
    <string name="clients_screen_title">Clients</string>
    <string name="careers_screen_title">Careers</string>
    <string name="groups_screen_title">Emirates Express Group</string>
    <string name="business_setup_screen_title">Business Set Up</string>
    <string name="news_screen_title">Economic News</string>
    <string name="login_screen_title">Login</string>
    <string name="about_us_screen_title">About Us</string>
    <string name="services_screen_title">Emirates Express Document Clearing Services</string>
    <string name="register_screen_title">Register</string>
    <string name="contact_us_screen_title">Contact Us</string>
    <string name="account_screen_title">Account</string>
    <string name="applications_screen_title">Applications</string>
    <string name="applications_detail_screen_title">Details</string>
    <string name="login_remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_caps">LOGIN</string>
    <string name="register_caps">REGISTER</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="company_name">COMPANY</string>
    <string name="nationality">NATIONALITY</string>
    <string name="mobile">MOBILE</string>
    <string name="gender">GENDER</string>
    <string name="email_address">EMAIL</string>
    <string name="name">NAME</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="take_photo">Take Photo</string>
    <string name="name_in_arabic">Name in Arabic</string>
    <string name="logout">Logout</string>
    <string name="send_btn">Send</string>
    <string name="contact_btn">Contact</string>
    <string name="applying_settings">Applying Settings, please wait!</string>
    <string name="loading_please_wait">Loading, please wait!</string>
    <string name="contact_us_send">Thankyou for contacting us!</string>
    <string name="thankyou">Thankyou!</string>
    <string name="all_fields_required">All fields are mandatory</string>
    <string name="invalid_email">Email address not valid</string>
    <string name="invalid_mobile">Mobile number not valid</string>
    <string name="registration_error">Error in Registration. Please try again!</string>
    <string name="password_error">Password fields do not match</string>
    <string name="approved">Approved</string>
    <string name="in_process">In Process</string>
    <string name="rejected">Rejected</string>
    <string name="new_application_details">New Application Details</string>
    <string name="consultation_form">Consultation Form</string>
    <string name="location_screen_title">Map Directions</string>
    <string name="client_heading">We are proud to list some of our elite customers, who are considered to be the source of our success and progression.</string>
    <string name="authority_text">Authority:</string>
    <string name="status_text">Status:</string>
    <string name="service_fee_text">Service Fee:</string>
    <string name="govt_fee_text">Govt Fee:</string>
    <string name="debit_text">Debit:</string>
    <string name="old_balance_text">Old Balance:</string>
    <string name="comments_text">COMMENTS</string>
    <string name="description_text">DESCRIPTION</string>
    <string name="read_more_btn">Read More</string>
    <string name="arabic">Arabic</string>
    <string name="track_application_btn">Track Application</string>
    <string name="about_us_desc_en">Established in 2006, Emirates Express Documents Clearing Company was the first accredited national company in the field of tracking and clearing documents, operating under the certified annual contracts system and providing “Public Relations Officer” service through a dedicated team of Emirati PROs.\n\nEmirates Express Documents Clearing Company is member of Emirates Express Group-Dubai which comprises a number of companies that aim to stimulate and activate a diversified economy in the United Arab Emirates and to render integrated services which enhance the efficiency of corporate performance and success.
	</string>
    <string name="services_businessmen_title_en">Businessmen Services</string>
	<string name="services_businessmen_desc_en">Services that provide businessmen the secretarial services and edit the records of the meetings for their business, as well as managing some of their own affairs such as organizing their appointments, and arrange meetings with other parties, in addition, arranging travel reservations, and moving to air planes or cars or stay in hotels and others.\n\nPlus, establishing companies and institutions to them, and do all the other businesses on the drafting of contracts, and contracts for establishment of private and public agencies, and other agencies.
	</string>
	<string name="services_documents_clearing_title_en">Document Clearing Services</string>
	<string name="services_documents_clearing_desc_en">Services for institutions and companies that operate in the preparation of documents, and document business and personal transactions for third party and complete the required details and submitted through the service of (Public Relations Officer) to ministries, departments, agencies, federal government institutions, and non-governmental institutions, by follow-up and completing them to those parties until the completion of related procedures.
	</string>
	<string name="services_typing_title_en">Typing Services</string>
	<string name="services_typing_desc_en">Typing all the required applications from government and semi-governmental and other agencies, including the required application from the Ministry of Labour, the General Directorate of Residency and Foreigners Affairs, Department of Economic Development, Department of Tourism and Commerce Marketing, Dubai Chamber of Commerce, Dubai Municipality, Ministry of Foreign Affairs, General Headquarter of Dubai Police, Dubai Traffic Department, Ministry of Education, Emirates Post offices, Ministry of Economy and Commerce, Dubai Customs, General Pensions &amp; Social Security Authority, Roads and Transport Authority, Ministry of Health, Dubai Health Authority, Dubai Electricity and Water Authority, Emirates Telecommunications Corporation - Etisalat, Real Estate Regulatory Agency, and other agencies.</string>
	<string name="services_photocopying_title_en">Photocopying Services</string>
	<string name="services_photocopying_desc_en">Services of preparing additional copies of documents in different kinds, whether printed or recorded on audio tapes or video or on the films or was in the form of photographs, and whether it is done through the use of specialized enterprises in Printing, recording, copying, or the use of their own equipments.
	</string>
	<string name="services_translation_title_en">Translation Services</string>
	<string name="services_translation_desc_en">Regular and simple Translation services for personal and commercial editors. In addition, carrying out the provision of services related to translation, such as proofreading, typing, photocopying documents by the competent authorities, as well as legal translation services that afforded by office-based clients with our offices through cooperation between us.
	</string>
	<string name="services_vehicles_regisration_title_en">Vehicles Registration Services</string>
	<string name="services_vehicles_regisration_desc_en">Services to individuals or companies to register their cars and vehicles to the competent authorities and traffic departments, including checking of vehicles in specialized workshops and completing the procedures for registering property and paying fees.
	</string>
	<string name="services_car_embarkation_title_en">Car Embarkation Services</string>
	<string name="services_car_embarkation_desc_en">Includes offices that will operate on the issuance of papers and necessary documents for driving personal cars outside the country or for shipment or has passed the international border by such as issuing international driving licenses and the issuance of tickets for freight cars and the books of international traffic (Trip Ticket) in accordance with the AIT / FIA.
	</string>
	<string name="group_documents_clearing_title_en">Emirates Express Document Clearing</string>
	<string name="group_documents_clearing_desc_en">License Activities: Vehicles Registration Services, Documents Copying Services, Typing &amp; Photocopying Services, Translation Services, Documents Clearing Services, Businessmen Services.

Includes firms which undertake to submit documents of commercial and personal transactions belonging to others to government and non-government bodies and following up these documents pending finalization of their formalities. 

Includes firms engaged in providing to businessmen secretarial services, shorthand writing, minutes taking as well as managing their affairs by means of scheduling their time, airline booking, hotel reservation, receive and see off at the airport, arrange their meetings with other parties. Includes firms which carry out the copying of documents, whether printed, audio or video taped, photographed, microfilmed or otherwise. These firms may use their own facilities or those of other firms. 

This includes offices which provide simple translation for ordinary personal and commercial letters and correspondences. This also includes services related to translation such as proofreading, typing, photocopying, attestation of documents etc. 

Includes firms undertaking vehicles registration at traffic departments on behalf of other individuals and companies, involving mechanical testing at the specialized workshops and at the testing centers of the traffic departments, then to handle all the registration formalities.</string>
	<string name="group_public_relation_title_en">Public Relation Management</string>
	<string name="group_public_relation_desc_en">License Includes firms perform as connecting link between commercial entities and the media to introduce and shed light on their activities and achievements as well as promoting corporate image through leaflets, produce information reflecting transparency, establish positive relations with customers by visits and participation in gatherings, enhance their employees sense of belonging.</string>
<string name="group_trading_llc_title_en">Emirates Express Trading LLC</string>
	<string name="group_trading_llc_desc_en">License Activities: Power Generation, Transmission &amp; Distribution Equipment Trading 

Includes reselling of power stations turbines, generators, and reactors, transmission and feed equipment, distribution keys, panels, current rectifiers, control systems and others for private or public use.</string>
	<string name="group_commercial_broker_title_en">Emirates Express Commercial Broker</string>
	<string name="group_commercial_broker_desc_en">License License Activities: Commercial Brokers 

Includes firms that play as negotiator or intermediary between the contract"'"s parties to get their points of view closer to each other, conclude sale and purchase contracts in own name for the account of a third party, such a contract is called broker contract and usually in return of a commission or remuneration paid by the third party, also, these firms that can make sale and purchase contracts exclusively on their own names, while transactions are being executed for the account of other par</string>
	<string name="group_building_house_cleaning_title_en">Building &amp; House Cleaning Services</string>
</resources>