<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/carrers"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/backgourndImg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <RelativeLayout
        android:id="@+id/titleParent"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FF0000" >

        <Button
            android:id="@+id/backBtn"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/backbtn"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/contact_us_screen_title"
            android:textColor="@android:color/white"
            android:textSize="22dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainParent"
        android:layout_width="fill_parent"
        android:layout_height="600dp"
        android:layout_below="@id/titleParent" >

        <RelativeLayout
            android:id="@+id/block1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:hint="@string/name" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/block1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" >

            <EditText
                android:id="@+id/country"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:hint="@string/nationality" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/block2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" >

            <EditText
                android:id="@+id/mobile"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:hint="@string/mobile"
                android:inputType="number" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/block3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" >

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />
        </RelativeLayout>
        
        
        <RelativeLayout
            android:id="@+id/block5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/block4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/takePhotoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                />
            
            <ImageView
                android:id="@+id/photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/takePhotoLabel"
                android:layout_marginLeft="10dp"
                android:background="@drawable/icon_camera"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/block5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" >

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                 >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="@android:color/black"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/female" 
                    />
            </RadioGroup>
            
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/block6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/sendBtn"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:background="@drawable/btnbg"
                android:gravity="center"
                android:text="@string/send_btn"
                android:textColor="#000055"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>