<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/backgourndImg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
         />

    <RelativeLayout
        android:id="@+id/titleParent"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FF0000" >

        <Button
            android:id="@+id/backBtn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/backbtn"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_screen_title"
            android:textColor="@android:color/white"
            android:textStyle="bold" 
            android:textSize="22dp"/>

        <!--
             <Button
            android:id="@+id/editBtn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="Edit"
            android:background="@drawable/barbtn"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black" />
        -->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainParent"
        android:layout_width="fill_parent"
        android:layout_height="600dp"
        android:layout_below="@id/titleParent"
        android:background="@drawable/loginpanebg" >

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        
        <RelativeLayout
            android:id="@+id/block1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTxt" 
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true">
            <EditText android:id="@+id/name" 
                android:layout_width="300dp" 
                android:layout_height="40dp"
                android:hint="@string/name"
                />
            
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/block2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/block1"
            android:layout_centerHorizontal="true">
            <EditText android:id="@+id/nameArabic" 
                android:layout_width="300dp" 
                android:layout_height="40dp"
                android:hint="@string/name_in_arabic"
                />
            
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/block3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/block2"
            android:layout_centerHorizontal="true">
            <EditText android:id="@+id/username" 
                android:layout_width="300dp" 
                android:layout_height="40dp"
                android:hint="@string/username"
                />
            
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/block4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/block3" 
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true">
            <EditText android:id="@+id/password" 
                android:layout_width="300dp" 
                android:layout_height="40dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
            
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/block5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/block4" 
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true">
            <EditText android:id="@+id/confirmPassword" 
                android:layout_width="300dp" 
                android:layout_height="40dp"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                />
            
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/block6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/block5" 
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true">
            <EditText android:id="@+id/companyName" 
                android:layout_width="300dp" 
                android:layout_height="40dp"
                android:hint="@string/company_name"
                />
            
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/block7"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/block6" 
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true">
            <EditText android:id="@+id/emailAddress" 
                android:layout_width="300dp" 
                android:layout_height="40dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                />
            
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/block8"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/block7" 
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true">
            <Button android:id="@+id/registerBtn" 
                android:layout_width="300dp" 
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                />
            <ImageView android:id="@+id/registerImg" 
                android:layout_width="20dp" 
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:background="@drawable/iconreg"
                />
            
        </RelativeLayout>
        
    </RelativeLayout>

</RelativeLayout>